完成基础框架的构建 已知bug：侧边栏没有做滚动条的overflow，因为在Layout.less中增加相关功能后（有注释:bug01），在fold模式下，子菜单无法弹出，算了，先不管

--- a/src/components/layout/Layout.less
+++ b/src/components/layout/Layout.less
@@ -5,17 +5,17 @@
   height: 100vh;
   .sidebar {
     &:hover{
-      overflow: auto;
+      //overflow: auto;
     }
     background: @sidebar-bgcolor;
     position: absolute;
 
-    height: calc(100% - 44px);
-    overflow: hidden;
-    z-index: 10000;
+    //height: calc(100% - 44px);
+    //overflow: hidden;
     //padding-bottom: 10px;
     @media (min-width: 768px) {
-      min-height:  calc(~"100% - 44px");
+      //min-height:  calc(~"100% - 44px");
+      min-height: e("calc(100vh - 44px)");
     }
 
     transition: all 0.3s ease-out;
@@ -29,18 +29,21 @@
     //  margin-left: 240px;
     //}
     //height: 100%;
-    overflow: auto;
+    overflow: hidden;
+    &:hover{
+      overflow: auto;
+    }
     height:  calc(~"100% - 44px");
 
   }
 
   .content {
+    //&:hover{
+    //  overflow: auto;
+    //  //background-color: rebeccapurple;
+    //}
     padding: 10px;
-    overflow: auto;
+    //overflow: hidden;
     background-color: #e6e6e6;
-    //min-height:  calc(~"100% - 44px");
-
-    //min-height: e("calc(100vh - 184px)");
-    //position: relative;
   }
 }
